背景とか設定

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1392,7 +1392,7 @@ font_size   14.0
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-# background_image none
+background_image ~/dotfiles/kitty/.config/kitty/wallpaper/0fa403_cb176b4dd4bb4103bf33dee3925177dc~mv2.png
 
 #: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
 #: format. Note that when using auto_color_scheme
@@ -1400,7 +1400,7 @@ font_size   14.0
 #: this option is overridden by the color scheme file and must be set
 #: inside it to take effect.
 
-# background_image_layout tiled
+background_image_layout cscaled
 
 #: Whether to tile, scale or clamp the background image. The value can
 #: be one of tiled, mirror-tiled, scaled, clamped, centered or
@@ -1419,7 +1419,7 @@ font_size   14.0
 #: this option is overridden by the color scheme file and must be set
 #: inside it to take effect.
 
-# background_tint 0.0
+ background_tint 0.9
 
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
@@ -1601,7 +1601,7 @@ font_size   14.0
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
