--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-font_family JetBrainsMono Nerd Font
+font_family JetBrainsMono Nerd Font Mono
 font_size   14.0
 
 
