--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1392,7 +1392,8 @@ font_size   14.0
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-background_image ~/dotfiles/kitty/.config/kitty/wallpaper/0fa403_cb176b4dd4bb4103bf33dee3925177dc~mv2.png
+# background_image ~/dotfiles/kitty/.config/kitty/wallpaper/0fa403_cb176b4dd4bb4103bf33dee3925177dc~mv2.png
+background_image ~/dotfiles/kitty/.config/kitty/wallpaper/0fa403_3a8c18b60f454e52a02b12a7463d9852.webp
 
 #: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
 #: format. Note that when using auto_color_scheme
