kitty-modに壁紙変更を割り当て

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2793,4 +2793,4 @@ allow_remote_control yes
 #: }}}
 #
 include ./tokyonight.conf
-map ctrl+k kitten kittens/random_background.py
+map kitty_mod+k kitten kittens/random_background.py
